--- a/back/src/Splio/RestBundle/Resources/config/services.yml
+++ b/back/src/Splio/RestBundle/Resources/config/services.yml
@@ -1,4 +1,9 @@
 services:
-#    splio_rest.example:
-#        class: Splio\RestBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    splio_rest.base_controller:
+        class: Splio\RestBundle\Controller\BaseController
+        arguments: []
+        calls:
+            - [setRouter, ['@router']]
+            - [setDebug, ['%kernel.debug%']]
+    base_controller:
+        alias: splio_rest.base_controller
