--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "flux": "^2.0.3",
     "object-assign": "^2.0.0",
     "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "bootstrap": "^3.3.4"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
