--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,8 @@
     "object-assign": "^2.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
-    "bootstrap": "^3.3.4"
+    "bootstrap": "^3.3.4",
+    "events": "1.0.2"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
