--- a/back/app/config/routing.yml
+++ b/back/app/config/routing.yml
@@ -1,3 +1,7 @@
+splio_watch:
+    resource: "@SplioWatchBundle/Resources/config/routing.yml"
+    prefix:   /
+
 splio_rest:
     resource: "@SplioRestBundle/Resources/config/routing.yml"
     prefix:   /
@@ -6,7 +10,3 @@ splio_rest_controller:
     resource:   "@SplioRestBundle/Controller"
     type:       annotation
     prefix:   /rest
-
-app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
