Add wsse support in rest bundle

--- a/back/app/config/security.yml
+++ b/back/app/config/security.yml
@@ -10,3 +10,9 @@ security:
 
         default:
             anonymous: ~
+
+security:
+    firewalls:
+        wsse_secured:
+            pattern:   /.*
+            wsse:      true
