Adds userController, tries to put first steps of auto validation/documentation pre-requesites

--- a/back/app/config/routing.yml
+++ b/back/app/config/routing.yml
@@ -2,6 +2,10 @@ splio_watch:
     resource: "@SplioWatchBundle/Resources/config/routing.yml"
     prefix:   /
 
+splio_watch_controller:
+    resource:   "@SplioWatchBundle/Controller"
+    type:       annotation
+
 splio_rest:
     resource: "@SplioRestBundle/Resources/config/routing.yml"
     prefix:   /
