--- a/back/src/Splio/RestBundle/Resources/config/routing.yml
+++ b/back/src/Splio/RestBundle/Resources/config/routing.yml
@@ -1,4 +1,4 @@
 home:
     path:   /
     defaults:
-        _controller: base_controller:indexAction
+        _controller: splio_rest_controller:indexAction
