--- a/back/src/Splio/RestBundle/Resources/config/services.yml
+++ b/back/src/Splio/RestBundle/Resources/config/services.yml
@@ -5,5 +5,6 @@ services:
         calls:
             - [setRouter, ['@router']]
             - [setDebug, ['%kernel.debug%']]
-    base_controller:
+
+    splio_rest_controller:
         alias: splio_rest.base_controller
