--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,9 @@
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "bootstrap": "^3.3.4",
-    "events": "1.0.2"
+    "events": "1.0.2",
+    "jquery": "^2.1.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
