--- a/back/src/Splio/WatchBundle/Resources/config/services.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/services.yml
@@ -4,11 +4,11 @@ services:
         arguments: []
 
     splio_watch.link_repository:
-        class: Doctrine\ORM\EntityRepository
+        class: Splio\WatchBundle\Entity\LinkRepository
         factory_service: doctrine.orm.default_entity_manager
         factory_method: getRepository
         arguments:
-            - Splio\WatchBundle\Entity\LinkRepository
+            - 'SplioWatchBundle:Link'
 
     splio_watch.link_service:
         class: Splio\WatchBundle\Service\LinkService
