--- a/back/src/Splio/WatchBundle/Resources/config/services.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/services.yml
@@ -2,6 +2,20 @@ services:
     splio_watch.user_service:
         class: Splio\WatchBundle\Service\UserService
         arguments: []
+        calls:
+            - [setLinkRepository, ["@link_repository"]]
+
+    user_service:
+        alias: splio_watch.user_service
+
+    splio_watch.link_service:
+        class: Splio\WatchBundle\Service\LinkService
+        arguments: []
+        calls:
+            - [setTagRepository, ["@tag_repository"]]
+
+    link_service:
+        alias: splio_watch.link_service
 
     splio_watch.link_repository:
         class: Splio\WatchBundle\Entity\LinkRepository
@@ -10,20 +24,18 @@ services:
         arguments:
             - 'SplioWatchBundle:Link'
 
-    splio_watch.link_service:
-        class: Splio\WatchBundle\Service\LinkService
-        arguments: []
-        calls:
-            - [setLinkRepository, ["@link_repository"]]
-
-    user_service:
-        alias: splio_watch.user_service
-
-    link_service:
-        alias: splio_watch.link_service
-
     link_repository:
         alias: splio_watch.link_repository
+
+    splio_watch.tag_repository:
+        class: Splio\WatchBundle\Entity\TagRepository
+        factory_service: doctrine.orm.default_entity_manager
+        factory_method: getRepository
+        arguments:
+            - 'SplioWatchBundle:Tag'
+
+    tag_repository:
+        alias: splio_watch.tag_repository
 
     # Controller as service
     splio_watch.default_controller:
