--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^3.3.4",
     "events": "1.0.2",
     "jquery": "^2.1.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "request": "^2.55.0",
+    "sha1": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
