--- a/front/package.json
+++ b/front/package.json
@@ -24,8 +24,8 @@
     "transform": ["reactify"]
   },
   "scripts": {
-    "start": "watchify -o bundle.js -v -d index.js",
-    "build": "browserify index.js -o bundle.js",
+    "start": "node_modules/.bin/watchify -o bundle.js -v -d index.js",
+    "build": "node_modules/.bin/browserify index.js -o bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
