--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -72,6 +72,24 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: false
+    paths:
+        '^/':
+            origin_regex: false
+            allow_origin: ['%front_app_url%']
+            allow_headers: ['X-Custom-Auth']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
+
 splio_watch:
     front_app_url:  "%front_app_url%"
     github_app_id:  "%github_app_id%"
