Apply PSR-2 coding style

--- a/back/src/Splio/WatchBundle/Resources/config/services.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/services.yml
@@ -15,6 +15,7 @@ services:
         arguments: []
         calls:
             - [setTagRepository, ["@tag_repository"]]
+            - [setLinkRepository, ["@link_repository"]]
 
     link_service:
         alias: splio_watch.link_service
