--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -85,6 +85,7 @@ nelmio_cors:
     paths:
         '^/':
             origin_regex: false
+            allow_credentials: true
             allow_origin: ['%front_app_url%']
             allow_headers: ['X-Custom-Auth']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
