--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -88,7 +88,7 @@ nelmio_cors:
             allow_credentials: true
             allow_origin: ['%front_app_url%']
             allow_headers: ['X-Custom-Auth']
-            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
             max_age: 3600
 
 splio_watch:
