--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -83,12 +83,12 @@ nelmio_cors:
         hosts: []
         origin_regex: false
     paths:
-        '^/':
+        '^/.*':
             origin_regex: false
             allow_credentials: true
-            allow_origin: ['%front_app_url%']
-            allow_headers: ['X-Custom-Auth']
-            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'OPTIONS']
+            allow_origin: ['*']
+            allow_headers: ['X-Custom-Auth','accept','authentication','x-wsse']
+            allow_methods: ['GET','POST','PATCH','PUT','DELETE','OPTIONS','HEAD']
             max_age: 3600
 
 splio_watch:
