--- a/back/composer.json
+++ b/back/composer.json
@@ -20,7 +20,8 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "guzzlehttp/guzzle": "~5.0",
-        "nelmio/cors-bundle": "^1.4"
+        "nelmio/cors-bundle": "^1.4",
+        "simple-bus/symfony-bridge": "^4.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
