Add user service methods

--- a/back/src/Splio/WatchBundle/Resources/config/services.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/services.yml
@@ -6,6 +6,7 @@ services:
             - [setLinkRepository, ["@link_repository"]]
             - [setEntityManager, ["@doctrine.orm.entity_manager"]]
             - [setTagRepository, ["@tag_repository"]]
+            - [setUserRepository, ["@user_repository"]]
 
     user_service:
         alias: splio_watch.user_service
