Add tag service/repository methods

--- a/back/src/Splio/WatchBundle/Resources/config/services.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/services.yml
@@ -26,6 +26,7 @@ services:
         arguments: []
         calls:
             - [setLinkRepository, ["@link_repository"]]
+            - [setTagRepository, ["@tag_repository"]]
 
     link_service:
         alias: splio_watch.link_service
