Add keymirror library

--- a/front/package.json
+++ b/front/package.json
@@ -10,12 +10,12 @@
     "react-router": "^0.13.3",
     "bootstrap": "^3.3.4",
     "events": "1.0.2",
-    "jquery": "^2.1.4",
     "underscore": "^1.8.3",
     "request": "^2.55.0",
     "sha1": "^1.1.0",
     "base-64": "^0.1.0",
-    "qs": "^2.4.2"
+    "qs": "^2.4.2",
+    "keymirror": "^0.1.1"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
