Add tag::create() method

--- a/back/src/Splio/WatchBundle/Resources/config/services.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/services.yml
@@ -28,6 +28,7 @@ services:
         calls:
             - [setLinkRepository, ["@link_repository"]]
             - [setTagRepository, ["@tag_repository"]]
+            - [setEntityManager, ["@doctrine.orm.entity_manager"]]
 
     link_service:
         alias: splio_watch.link_service
