--- a/back/src/Splio/WatchBundle/Resources/config/serializer.yml
+++ b/back/src/Splio/WatchBundle/Resources/config/serializer.yml
@@ -2,6 +2,7 @@
 services:
     splio_watch.link_serializer:
         class: Splio\WatchBundle\Serializer\LinkSerializer
+        parent: splio_watch.link_base_serializer
         calls:
             - [setTagSerializer, ['@tag_base_serializer']]
             - [setUserSerializer, ['@user_base_serializer']]
@@ -11,12 +12,15 @@ services:
 
     splio_watch.link_base_serializer:
         class: Splio\WatchBundle\Serializer\LinkBaseSerializer
+        calls:
+            - [setRouter, ['@router']]
 
     link_base_serializer:
         alias: splio_watch.link_base_serializer
 
     splio_watch.tag_serializer:
         class: Splio\WatchBundle\Serializer\TagSerializer
+        parent: splio_watch.tag_base_serializer
         calls:
             - [setLinkSerializer, ['@link_base_serializer']]
 
@@ -25,12 +29,15 @@ services:
 
     splio_watch.tag_base_serializer:
         class: Splio\WatchBundle\Serializer\TagBaseSerializer
+        calls:
+            - [setRouter, ['@router']]
 
     tag_base_serializer:
         alias: splio_watch.tag_base_serializer
 
     splio_watch.user_serializer:
         class: Splio\WatchBundle\Serializer\UserSerializer
+        parent: splio_watch.user_base_serializer
         calls:
             - [setLinkSerializer, ['@link_base_serializer']]
 
@@ -39,6 +46,8 @@ services:
 
     splio_watch.user_base_serializer:
         class: Splio\WatchBundle\Serializer\UserBaseSerializer
+        calls:
+            - [setRouter, ['@router']]
 
     user_base_serializer:
         alias: splio_watch.user_base_serializer
