--- a/front/package.json
+++ b/front/package.json
@@ -15,18 +15,20 @@
     "sha1": "^1.1.0",
     "base-64": "^0.1.0",
     "qs": "^2.4.2",
-    "keymirror": "^0.1.1"
+    "keymirror": "^0.1.1",
+    "backbone": "^1.1.2"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
     "watchify": "^3.2.1",
-    "reactify": "^1.1.1"
+    "reactify": "^1.1.1",
+    "babelify": "^6.1.0"
   },
   "browserify": {
-    "transform": ["reactify"]
+    "transform": ["babelify", "reactify"]
   },
   "scripts": {
-    "start": "watchify -o bundle.js -v -d index.js",
+    "start": "watchify -t babelify -t reactify -o bundle.js -v -d index.js",
     "build": "browserify index.js -o bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
