--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -91,7 +91,7 @@ nelmio_cors:
             origin_regex: false
             allow_credentials: true
             allow_origin: ['*']
-            allow_headers: ['X-Custom-Auth','accept','authentication','x-wsse']
+            allow_headers: ['*']
             allow_methods: ['GET','POST','PATCH','PUT','DELETE','OPTIONS','HEAD']
             max_age: 3600
 
