--- a/back/app/config/security.yml
+++ b/back/app/config/security.yml
@@ -8,10 +8,13 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        home:
+            pattern: ^/
+            anonymous: ~
+        authentication:
+            pattern: ^/auth.*
+            anonymous: ~
         wsse_secured:
             pattern:   /.*
             stateless: true
             wsse:      true
-        basic:
-            pattern: /(auth.*)?$
-            anonymous: ~
